Fix contrast issues

--- a/_sass/layouts/_indicator.scss
+++ b/_sass/layouts/_indicator.scss
@@ -397,7 +397,7 @@
         color: #337ab7;
 
         .tags li{
-          color: black;
+          color: #044b88;
         }
       }
       .indicator-cards.target {
